--- a/022.Club-Website/resources/css/style.css
+++ b/022.Club-Website/resources/css/style.css
@@ -7,7 +7,7 @@
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(resources/images/banner.jpeg);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(../images/banner.jpeg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -347,7 +347,7 @@ h3 {
 .cta {
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(resources/images/banner2.jpeg);
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../images/banner2.jpeg);
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -393,7 +393,7 @@ footer .fa {
 .sub-header {
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(images/about.jpeg);
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(../images/about.jpeg);
     background-position: center;
     background-size: cover;
     color: #fff;
