--- a/026.Personal-Portfolio/resources/css/styles.css
+++ b/026.Personal-Portfolio/resources/css/styles.css
@@ -226,7 +226,7 @@ section .header{
     margin-top: 4rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+    gap: none;
 }
 
 .project .card{
